samples/_failures_safe/1761400375_3fa85c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5d09844f.c: In function ‘main’:
./samples/SAFE/__tmp_5d09844f.c:159:9: error: expected expression at end of input
  159 |         if (tokens[token_count].type == TOKEN_ERROR)
      |         ^~
./samples/SAFE/__tmp_5d09844f.c:159:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5d09844f.c:159:9: error: expected declaration or statement at end of input
